# sleef_cmake_example

./: .gitmodules  CMakeLists.txt  README.md
csrc/: sleef_cmake_example.cpp
